--- a/wapproject/src/main/webapp/css/theme-elements.css
+++ b/wapproject/src/main/webapp/css/theme-elements.css
@@ -14,7 +14,7 @@
 	#Icon Box
 	#Blockquotes & Testimonial
 	#Alerts
-	#Dropcaps
+	#Dropcaps 
 	#Pricing Tables
 	#Progress Bars
 	#Misc
@@ -56,7 +56,7 @@ h6,
   font-weight: normal;
   line-height: 1.2em;
   margin: 0 0 1em 0;
-  color: #2f2f2f;
+  color: #f5f5f5;
   text-transform: uppercase;
 }
 h1 small,
